--- a/ui/index.html
+++ b/ui/index.html
@@ -15,5 +15,9 @@
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
+        alert("POP UP!!");
+         
+        <script>
+        </script>
     </body>
 </html>
