[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -6,7 +6,7 @@
 		margin:0px;
 
 		background-repeat: no-repeat;
-		background-image:url("writing-implements-1285329_640.jpg");
+		background-image:url("https://media.licdn.com/mpr/mpr/p/5/005/099/200/2b2eeee.jpg");
 		background-size: cover;
 		background-attachment: scroll;
 	}
@@ -61,13 +61,5 @@
 	<div class="top" id="logIn">login</div>
     </div>
     <div id="bottom"></div>
-    <script>
-    function article()
-    {
-    	var v=document.getElementById("bottom");
-    	v.innerHTML="jjfbfjhsfkjd";
-
-    } 
-    </script>
 </body>
 </html>
