--- a/ui/index.html
+++ b/ui/index.html
@@ -1,65 +1,22 @@
+<!doctype html>
 <html>
-<head>
-	<title>Letter to the nation</title>
-	<style type="text/css">
-	body{
-		margin:0px;
-
-		background-repeat: no-repeat;
-		background-image:url("https://media.licdn.com/mpr/mpr/p/5/005/099/200/2b2eeee.jpg");
-		background-size: cover;
-		background-attachment: scroll;
-	}
-
-	#header
-	{
-		background-color: black;
-		margin:0px;
-	}
-	.top
-	{
-		height:20px;
-		width:424px;
-		display:inline-block;
-		padding :14px;
-		color:white;
-		font-family:cursive;
-		background-color: black;
-	}
-	.top:hover
-	{
-		background-color: grey;
-	}
-	#logIn{
-		float:right:;
-	}
-	#title1
-	{
-          font-family:cursive;
-          margin:20px;
-          font-size:-webkit-xxx-large;
-          color:crimson;
-	}
-	#bottom
-	{
-		margin:5px;
-		height: 120px;
-		width:1000px;
-	}
-	a{
-		text-decoration: none;
-		color:white;
-	}
-
-	</style>
-</head>
-<body>
-	<div id="title1">Letter from the nation!</div>
-	<div id="header">
-	<div class="top" id="articles" onClick="article()" ><a href="article.html"> Articles </a></div>         
-	<div class="top" id="write">Write</div>
-	<div class="top" id="logIn">login</div>
-    </div>
-    <div id="bottom"></div>
-</body>
+    <head>
+        <link href="/ui/style.css" rel="stylesheet" />
+    </head>
+    <body>
+        <div class="center">
+            <img src="/ui/madi.png" class="img-medium"/>
+        </div>
+        <br>
+        <div class="center text-big bold">
+            Hi! I am Aishwarya and this is my first webapp.
+            <h4>This is a new heading </h4>
+            I have made some local changes
+        </div>
+        <script type="text/javascript" src="/ui/main.js">
+        </script>
+        <script>
+        alert("POP UP!!");
+        </script>
+    </body>
 </html>
