--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 		margin:0px;
 
 		background-repeat: no-repeat;
-		background-image:url("pencil-1486278.jpg");
+		background-image:url("https://cdn.pixabay.com/photo/2016/06/29/08/50/pencil-1486278_960_720.jpg");
 		background-size: cover;
 		background-attachment: scroll;
 	}
