--- a/ui/index.html
+++ b/ui/index.html
@@ -1,22 +1,76 @@
 <!doctype html>
 <html>
-    <head>
-        <link href="/ui/style.css" rel="stylesheet" />
-    </head>
-    <body>
-        <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
-        </div>
-        <br>
-        <div class="center text-big bold">
-            Hi! I am Aishwarya and this is my first webapp.
-            <h4>This is a new heading </h4>
-            I have made some local changes
-        </div>
-        <script type="text/javascript" src="/ui/main.js">
-        </script>
-        <script>
-        alert("POP UP!!");
-        </script>
-    </body>
+<head>
+	<title>Letter to the nation</title>
+	<style type="text/css">
+	body{
+		margin:0px;
+
+		background-repeat: no-repeat;
+		background-image:url("https://cdn.pixabay.com/photo/2016/06/29/08/50/pencil-1486278_960_720.jpg");
+		background-size: cover;
+		background-attachment: scroll;
+	}
+
+	#header
+	{
+		background-color: black;
+		margin:0px;
+		margin-top: 10px;
+	}
+	.top
+	{
+		height:20px;
+		width:424px;
+		display:inline-block;
+		padding :14px;
+		color:white;
+		font-family:cursive;
+		background-color: black;
+	}
+	.top:hover
+	{
+		background-color: grey;
+	}
+	#logIn{
+		float:right:;
+	}
+	#title1
+	{
+          font-family:cursive;
+          margin:20px;
+          font-size:-webkit-xxx-large;
+          color:white;
+          margin:0px;
+	}
+	#bottom
+	{
+		margin:5px;
+		height: 120px;
+		width:1000px;
+	}
+	a{
+		text-decoration: none;
+		color:white;
+	}
+
+	</style>
+</head>
+<body>
+	<div id="title1"><img src="clipboard-1772235_960_720.png" style="height:52px;width:50px;margin-right:15px;margin-left:10px;">Letter from the nation!</div>
+	<div id="header">
+	<a href="article.html"><div class="top" id="articles" onClick="article()" > Articles </div> </a>        
+	<a href="write.html"><div class="top" id="write">Write</div></a>
+	<a href="registration.html"><div class="top" id="logIn">login</div></a>
+    </div>
+    <div id="bottom"></div>
+    <script>
+    function article()
+    {
+    	var v=document.getElementById("bottom");
+    	v.innerHTML="jjfbfjhsfkjd";
+
+    } 
+    </script>
+</body>
 </html>
