[imad-console] Updates registration.html

--- a/registration.html
+++ b/registration.html
@@ -40,13 +40,13 @@ border: lightblue;}
 	
 	</style>
 </head>
-</body>
+<body>
    <div class="main">
    	
    		<p>Let the nation know what you think !</p><br>
    		<span style="    font-style: italic;font-size: x-large;color: darkgoldenrod;text-transform: capitalize;"><b>please fill the correct information</b></span><br><br>
-   		<form action=""method="post">
-   			<pre><span style="color:gray">NAME</span>
+   		<form action='method="post"'>
+   			<pre><span style='color:"gray";'>NAME</span>
 <input  type="text" name="name" value="" id="name" placeholder="Harry Potter" required />  <span style="color:red;font-size:x-large">*</span><br>
 <span style="color:grey">EMAIL</span>
 <input  type="email" name="email" value="" id="email" placeholder="harrypotter123@gmail.com" required/>  <span style="color:red;font-size:x-large">*</span><br>
