[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -61,7 +61,7 @@
 	<div id="header">
 	<a href="article.html"><div class="top" id="articles" onClick="article()" > Articles </div> </a>        
 	<a href="write.html"><div class="top" id="write">Write</div></a>
-	<a href="registration.html"><div class="top" id="logIn">login</div></a>
+	<a href="ui/registration.html"><div class="top" id="logIn">login</div></a>
     </div>
     <div id="bottom"></div>
     <script>
