[imad-console] Updates ui/write.html

--- a/ui/write.html
+++ b/ui/write.html
@@ -4,7 +4,7 @@
 	<style type="text/css">
 	body
 	{
-		background-image: url("stack-letters-447579.jpg");
+		background-image: url("https://cdn.pixabay.com/photo/2014/09/15/22/23/stack-letters-447579_960_720.jpg");
 		background-attachment: scroll;
 		background-size: cover;
 	}
