[imad-console] Updates ui/write.html

--- a/ui/write.html
+++ b/ui/write.html
@@ -16,7 +16,7 @@
 		title
 	   <input type="text" name="title"><br>
 	   content
-	   <input type="text-area" name="desciption" style="height:px; width=100px;"> </input>
+	   <input type="text-area" name="desciption" style="height:px; width=100px;">
 	</form>
 </body>
 </html>
