--- a/ui/index.html
+++ b/ui/index.html
@@ -59,8 +59,8 @@
 <body>
 	<div id="title1"><img src="https://cdn.pixabay.com/photo/2013/06/07/09/53/notepad-117597_960_720.png" style="height:52px;width:50px;margin-right:15px;margin-left:10px;">Letter from the nation!</div>
 	<div id="header">
-	<a href="article.html"><div class="top" id="articles" onClick="article()" > Articles </div> </a>        
-	<a href="write.html"><div class="top" id="write">Write</div></a>
+	<a href="ui/article.html"><div class="top" id="articles" onClick="article()" > Articles </div> </a>        
+	<a href="ui/write.html"><div class="top" id="write">Write</div></a>
 	<a href="ui/registration.html"><div class="top" id="logIn">login</div></a>
     </div>
     <div id="bottom"></div>
