--- a/ui/index.html
+++ b/ui/index.html
@@ -7,7 +7,7 @@
 		margin:0px;
 
 		background-repeat: no-repeat;
-		background-image:url("pencil-1486278_960_720.jpg");
+		background-image:url("ui/pencil-1486278_960_720.jpg");
 		background-size: cover;
 		background-attachment: scroll;
 	}
