--- a/ui/registration.html
+++ b/ui/registration.html
@@ -42,6 +42,15 @@ border: lightblue;}
 </head>
 <body>
    <div class="main">
+	   
+   	<span id="text" style="color:white;font-size:xx-large;font-family:Gobriola">For already registered users : </span>
+   <form class="login" method="get">
+   	Login ID : <input class="first1" type="text" id="username" placeholder="username"/>
+   	Password :<input class="first1" type="password" name="password" placeholder="**********"/>
+   	<input class="first1" type="submit" id="submit_btn" " style="background-color:red;color:white;width:100px;alignment:center;">
+   </form>
+   <hr/>
+
    	
    		<p>Let the nation know what you think !</p><br>
    		<span style="    font-style: italic;font-size: x-large;color: darkgoldenrod;text-transform: capitalize;"><b>please fill the correct information</b></span><br><br>
