--- a/ui/registration.html
+++ b/ui/registration.html
@@ -36,6 +36,15 @@
     font-size: large;
 margin: 10px;
 border: lightblue;}
+		.first1
+ {
+ 	width:195px;
+ 	margin-bottom:60px;
+ }
+ .login{
+ 	font-family:cursive;
+ }
+	
     
 	
 	</style>
