--- a/ui/registration.html
+++ b/ui/registration.html
@@ -36,24 +36,23 @@
     font-size: large;
 margin: 10px;
 border: lightblue;}
-		.first1
+.first1
  {
  	width:195px;
  	margin-bottom:60px;
  }
  .login{
  	font-family:cursive;
- }
-	
+ }	
     
 	
-	</style>
+</style>
 </head>
 <body>
    <div class="main">
 	   
-   	<span id="text" style="color:white;font-size:xx-large;font-family:Gobriola">For already registered users : </span>
-   <form class="login" method="get">
+   	<span id="text" style="font-size:xx-large;font-family:Gobriola">For already registered users : </span>
+       <form class="login" method="get">
    	Login ID : <input class="first1" type="text" id="username" placeholder="username"/>
    	Password :<input class="first1" type="password" name="password" placeholder="**********"/>
    	<input class="first1" type="submit" id="submit_btn" " style="background-color:red;color:white;width:100px;alignment:center;">
