--- a/ui/registration.html
+++ b/ui/registration.html
@@ -7,7 +7,7 @@
 	}
 	body
 	{
-		background-image: url("typewriter-801921.jpg");
+		background-image: url("ui/stack-letters-447579.jpg");
 	}
 	.main{
 		  margin:50px auto;
