--- a/ui/registration.html
+++ b/ui/registration.html
@@ -27,9 +27,6 @@
     		font-size: xx-large;
     		color: grey;
 	}
-	body{
-		background-color:  #0b4c62;;
-	}
 	input{background-color: rgba(0, 188, 212, 0.25);
 	    padding: 5px;
     width: 500px;
@@ -51,7 +48,7 @@ border: lightblue;}
 <body>
    <div class="main">
 	   
-   	<span id="text" style="font-size:xx-large;font-family:Gobriola">For already registered users : </span>
+   	<span id="text" style="font-size:xx-large;font-family:cursive">For already registered users : </span>
        <form class="login" method="get">
    	Login ID : <input class="first1" type="text" id="username" placeholder="username"/>
    	Password :<input class="first1" type="password" name="password" placeholder="**********"/>
