--- a/ui/index.html
+++ b/ui/index.html
@@ -7,7 +7,7 @@
 		margin:0px;
 
 		background-repeat: no-repeat;
-		background-image:url("/ui/pencil-1486278_960_720.jpg");
+		background-image:url("https://cdn.pixabay.com/photo/2016/03/05/20/01/art-1238602_960_720.jpg");
 		background-size: cover;
 		background-attachment: scroll;
 	}
@@ -57,7 +57,7 @@
 	</style>
 </head>
 <body>
-	<div id="title1"><img src="/ui/clipboard-1772235_960_720.png" style="height:52px;width:50px;margin-right:15px;margin-left:10px;">Letter from the nation!</div>
+	<div id="title1"><img src="https://cdn.pixabay.com/photo/2015/06/15/20/18/writing-pad-810542_960_720.jpg" style="height:52px;width:50px;margin-right:15px;margin-left:10px;">Letter from the nation!</div>
 	<div id="header">
 	<a href="ui/article.html"><div class="top" id="articles" onClick="article()" > Articles </div> </a>        
 	<a href="ui/write.html"><div class="top" id="write">Write</div></a>
