--- a/ui/registration.html
+++ b/ui/registration.html
@@ -7,7 +7,7 @@
 	}
 	body
 	{
-		background-image: url("ui/stack-letters-447579.jpg");
+		background-image: url("https://cdn.pixabay.com/photo/2016/10/15/22/17/pens-1743728_960_720.jpg");
 	}
 	.main{
 		  margin:50px auto;
@@ -27,9 +27,7 @@
     		font-size: xx-large;
     		color: grey;
 	}
-	body{
-		background-color:  #0b4c62;;
-	}
+	
 	input{background-color: rgba(0, 188, 212, 0.25);
 	    padding: 5px;
     width: 500px;
