--- a/ui/registration.html
+++ b/ui/registration.html
@@ -8,6 +8,7 @@
 	body
 	{
 		background-image: url("https://cdn.pixabay.com/photo/2016/10/15/22/17/pens-1743728_960_720.jpg");
+		background-attachment:cover;
 	}
 	.main{
 		  margin:50px auto;
