--- a/ui/registration.html
+++ b/ui/registration.html
@@ -8,7 +8,7 @@
 	body
 	{
 		background-image: url("https://cdn.pixabay.com/photo/2016/09/23/20/26/jassen-1690374_960_720.jpg");
-		background-attachment:cover;
+		background-size:cover;
 	}
 	.main{
 		  margin:50px auto;
