--- a/ui/registration.html
+++ b/ui/registration.html
@@ -7,7 +7,7 @@
 	}
 	body
 	{
-		background-image: url("https://cdn.pixabay.com/photo/2016/09/23/20/26/jassen-1690374_960_720.jpg");
+		background-image: url("ui/typewriter-801921.jpg");
 		background-size:cover;
 	}
 	.main{
