--- a/ui/registration.html
+++ b/ui/registration.html
@@ -7,7 +7,7 @@
 	}
 	body
 	{
-		background-image: url("https://cdn.pixabay.com/photo/2015/06/08/15/11/typewriter-801921_960_720.jpg");
+		background-image: url("/ui/typewriter-801921.jpg");
 		background-size:cover;
 	}
 	.main{
